[gd_scene load_steps=22 format=2]

[ext_resource path="res://characters/character.gd" type="Script" id=1]
[ext_resource path="res://characters/spritesheet.png" type="Texture" id=2]
[ext_resource path="res://characters/walk_state.gd" type="Script" id=3]
[ext_resource path="res://characters/run_state.gd" type="Script" id=4]
[ext_resource path="res://characters/jump_state.gd" type="Script" id=5]
[ext_resource path="res://characters/dash_state.gd" type="Script" id=6]
[ext_resource path="res://characters/roll_state.gd" type="Script" id=7]

[sub_resource type="CapsuleShape" id=1]
radius = 0.4
height = 0.4

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
flags_unshaded = true
params_billboard_mode = 1

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 63 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 64 ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 60 ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 112 ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 111 ]
}

[sub_resource type="Animation" id=8]
length = 0.14
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07, 0.14 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 60, 61, 62 ]
}

[sub_resource type="Animation" id=9]
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 120, 121, 122, 121, 122 ]
}

[sub_resource type="Animation" id=11]
resource_name = "Roll"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.001, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 58, 58, 59, 49 ]
}

[sub_resource type="Animation" id=12]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 21 ]
}

[sub_resource type="Animation" id=13]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 114 ]
}

[sub_resource type="Animation" id=14]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 6, 5 ]
}

[sub_resource type="Animation" id=10]
resource_name = "WalkRest"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[node name="Character" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, -1, 0, 1, -4.37114e-008, 0, 0.6, 0 )
shape = SubResource( 1 )

[node name="Sprite3D" type="Sprite3D" parent="."]
material_override = SubResource( 2 )
offset = Vector2( -4, 80 )
texture = ExtResource( 2 )
vframes = 14
hframes = 10

[node name="Animations" type="AnimationPlayer" parent="."]
anims/Dash = SubResource( 3 )
anims/DashBack = SubResource( 4 )
anims/DashBrake = SubResource( 5 )
anims/DashLand = SubResource( 6 )
anims/DashLandBack = SubResource( 7 )
anims/Jump = SubResource( 8 )
anims/Pain = SubResource( 9 )
anims/Roll = SubResource( 11 )
anims/Run = SubResource( 12 )
anims/RunBrake = SubResource( 13 )
anims/Walk = SubResource( 14 )
anims/WalkRest = SubResource( 10 )

[node name="WalkState" type="Node" parent="."]
script = ExtResource( 3 )

[node name="RunState" type="Node" parent="."]
script = ExtResource( 4 )

[node name="JumpState" type="Node" parent="."]
script = ExtResource( 5 )

[node name="DashState" type="Node" parent="."]
script = ExtResource( 6 )

[node name="RollState" type="Node" parent="."]
script = ExtResource( 7 )

[connection signal="animation_finished" from="Animations" to="." method="_animation_finished"]
